# crash_code

./: .dockerignore  .flake8  .gitignore  .isort.cfg  .markdownlint.json  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  azure-pipelines.yml  docker-compose.yaml  pyproject.toml
crash_code/: generator_covariance.py  generator_distribution.py  generator_penalty.py  generator_scenario.py  generator_subproblem.py  nearest_correlation.py  optimize.py  pyproject.toml  stochastic.py
crash_code/tests/: test_crash_code.py
jupyter_scripts/: A  Histogram_Learning_Sequence.ipynb  KG-test.py  NetworkFigure.ipynb  NetworkFigure2.ipynb  scratch.ipynb  serialize_graph.ipynb  sqlalchemy2.ipynb  sqlalquemy_examples.ipynb
scripts/: histogram_learning_sequence.ipynb  network_figure.ipynb  single_run.py
sql/: Script_1.sql  Script_3.sql  Script_5.sql  Script_6.sql  Script_8.sql  crash_iteration_2.sql  crash_meta.sql  crash_output.sql
src/: db_driver.py  generator_covariance.py  generator_crash.py  generator_distribution.py  generator_network.py  generator_penalty.py  generator_scenario.py  generator_subproblem.py  knowledge_gradient.py  nearest_correlation.py  optimize.py  single_run.py  stochastic.py  uncrashed_bounds.py  utilities.py
tests/: KG-test.py
