[tool.poetry]
name = "crash_code"
version = "0.1.0"
description = "Code for crashing optimization"
authors = ["Ricardo A. Collado"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
numpy = "^1.22.3"
scipy = "^1.8.0"
pandas = "^1.4.2"
SQLAlchemy = "^1.4.34"
networkx = "^2.7.1"
matplotlib = "^3.5.1"
gurobipy = "^9.5.1"
pyfiglet = "^0.8.post1"
bootstrapped = "^0.0.2"
jellyfish = "^0.9.0"
statsmodels = "^0.13.2"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
flake8 = "^4.0.1"
mypy = "^0.942"
pre-commit = "^2.18.1"
jupyter = "^1.0.0"
notebook = "^6.4.10"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
