[tool.poetry]
authors = ["Ricardo A. Collado"]
description = "Code for crashing optimization"
name = "crash_code"
packages = [{include = "crash_code"}]
version = "1.0.0"

[tool.poetry.dependencies]
SQLAlchemy = "^1.4.34"
bootstrapped = "^0.0.2"
graphviz = "^0.19.1"
gurobipy = "^9.5.1"
jellyfish = "^0.9.0"
matplotlib = "^3.5.1"
networkx = "^2.7.1"
numpy = "^1.22.3"
pandas = "^1.4.2"
pydot = "^1.4.2"
pyfiglet = "^0.8.post1"
pygmo = "^2.16.1"
python = ">=3.8,<3.9"
scipy = "^1.8.0"
statsmodels = "^0.13.2"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
flake8 = "^4.0.1"
jupyter = "^1.0.0"
mypy = "^0.942"
notebook = "^6.4.10"
pre-commit = "^2.18.1"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
